--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "pavlin0v",email = "malinavpavel@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4.0"
 dependencies = [
     "alembic (>=1.15.2,<2.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
@@ -18,7 +18,9 @@ dependencies = [
     "python-multipart (>=0.0.20,<0.0.21)",
     "sqlalchemy (>=2.0.41,<3.0.0)",
     "black (>=25.1.0,<26.0.0)",
-    "uvicorn[standard] (>=0.34.2,<0.35.0)"
+    "uvicorn[standard] (>=0.34.2,<0.35.0)",
+    "mido (>=1.3.3,<2.0.0)",
+    "pretty-midi (>=0.2.10,<0.3.0)"
 ]
 
 [tool.poetry]
